--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -1,9 +1,9 @@
-name: Every Minute Auto Update Workflow
+name: Daily Auto Update Workflow
 
-# Menjalankan setiap menit
+# Menjalankan sekali setiap hari pada pukul 00:00 UTC
 on:
   schedule:
-    - cron: '*/1 * * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   update-repo:
