--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -3,7 +3,7 @@ name: Daily Auto Update Workflow
 # Menjalankan sekali setiap hari pada pukul 00:00 UTC
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 */4 * * *'  # Setiap 4 jam pada menit ke-0
 
 jobs:
   update-repo:
